Fixed nav bar render issue on safari.

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -15,6 +15,7 @@ img.logo {
 
 nav section {
     display: flex;
+    align-items: center;
 }
 
 img.menu-icon {
